--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "YÜDÜ - Daha Yüksek mi Daha Düşük mü?",
+  "name": "YÜDÜ - Yüksek mi Düşük mü?",
   "short_name": "YÜDÜ",
   "start_url": ".",
   "display": "standalone",
